fix: Put gap between sections #18

--- a/assets/styles/base-styles.scss
+++ b/assets/styles/base-styles.scss
@@ -247,7 +247,7 @@ a.navbar-item:hover {
 .title2 {
   font-size: 2rem;
   text-align: left;
-  margin: 1rem 0;
+  margin: 4rem 0 1rem;
   color: #555;
 }
 
